kubernetesmanifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: admin-ui
    app.kubernetes.io/name: admin-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  name: admin-ui
  namespace: forgerock-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: admin-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: admin-ui
    app.kubernetes.io/name: admin-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: am
    app.kubernetes.io/component: am
    app.kubernetes.io/instance: am
    app.kubernetes.io/name: am
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: am
  namespace: forgerock-dev
spec:
  ports:
  - name: am
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: am
    app.kubernetes.io/component: am
    app.kubernetes.io/instance: am
    app.kubernetes.io/name: am
    app.kubernetes.io/part-of: forgerock
    tier: middle
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    affinity: directory
    app: ds-cts
    app.kubernetes.io/component: directory
    app.kubernetes.io/instance: ds-cts
    app.kubernetes.io/name: ds
    app.kubernetes.io/part-of: forgerock
    component: ds
  name: ds-cts
  namespace: forgerock-dev
spec:
  clusterIP: None
  ports:
  - name: admin
    port: 4444
  - name: ldap
    port: 1389
  - name: ldaps
    port: 1636
  - name: http
    port: 8080
  - name: https
    port: 8443
  selector:
    affinity: directory
    app: ds-cts
    app.kubernetes.io/component: directory
    app.kubernetes.io/instance: ds-cts
    app.kubernetes.io/name: ds
    app.kubernetes.io/part-of: forgerock
---
apiVersion: v1
kind: Service
metadata:
  labels:
    affinity: directory
    app: ds-idrepo
    app.kubernetes.io/component: directory
    app.kubernetes.io/instance: ds-idrepo
    app.kubernetes.io/name: ds
    app.kubernetes.io/part-of: forgerock
    component: ds
  name: ds-idrepo
  namespace: forgerock-dev
spec:
  clusterIP: None
  ports:
  - name: admin
    port: 4444
  - name: ldap
    port: 1389
  - name: ldaps
    port: 1636
  - name: http
    port: 8080
  - name: https
    port: 8443
  selector:
    affinity: directory
    app: ds-idrepo
    app.kubernetes.io/component: directory
    app.kubernetes.io/instance: ds-idrepo
    app.kubernetes.io/name: ds
    app.kubernetes.io/part-of: forgerock
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: end-user-ui
    app.kubernetes.io/name: end-user-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  name: end-user-ui
  namespace: forgerock-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: end-user-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: end-user-ui
    app.kubernetes.io/name: end-user-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: idm
    app.kubernetes.io/component: idm
    app.kubernetes.io/instance: idm
    app.kubernetes.io/name: idm
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: idm
  namespace: forgerock-dev
spec:
  ports:
  - name: idm
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: idm
    app.kubernetes.io/component: idm
    app.kubernetes.io/instance: idm
    app.kubernetes.io/name: idm
    app.kubernetes.io/part-of: forgerock
    tier: middle
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: login-ui
    app.kubernetes.io/name: login-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  name: login-ui
  namespace: forgerock-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: login-ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: login-ui
    app.kubernetes.io/name: login-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: admin-ui
    app.kubernetes.io/name: admin-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  name: admin-ui
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-ui
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: admin-ui
      app.kubernetes.io/name: admin-ui
      app.kubernetes.io/part-of: forgerock
      tier: ui
  template:
    metadata:
      labels:
        app: admin-ui
        app.kubernetes.io/component: ui
        app.kubernetes.io/instance: admin-ui
        app.kubernetes.io/name: admin-ui
        app.kubernetes.io/part-of: forgerock
        tier: ui
    spec:
      containers:
      - env:
        - name: SUBFOLDER
          value: platform
        image: gcr.io/forgerock-io/platform-admin-ui:7.3.1
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /usr/sbin/nginx
              - -s
              - quit
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: admin-ui
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
      securityContext:
        runAsGroup: 0
        runAsUser: 101
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: am
    app.kubernetes.io/component: am
    app.kubernetes.io/instance: am
    app.kubernetes.io/name: am
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: am
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: am
      app.kubernetes.io/component: am
      app.kubernetes.io/instance: am
      app.kubernetes.io/name: am
      app.kubernetes.io/part-of: forgerock
      tier: middle
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: am
        app.kubernetes.io/component: am
        app.kubernetes.io/instance: am
        app.kubernetes.io/name: am
        app.kubernetes.io/part-of: forgerock
        tier: middle
    spec:
      containers:
      - command:
        - bash
        - /home/forgerock/docker-entrypoint.sh
        image: ghcr.io/maximv93/am:v1@sha256:897aa31ec6f7a2b07aa33e177e89d961c58639a92de2471ef9a52e4f523551e2
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /am/json/health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        name: openam
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /am/json/health/ready
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        startupProbe:
          failureThreshold: 40
          httpGet:
            path: /am/json/health/live
            port: 8080
          periodSeconds: 10
        volumeMounts:
        - mountPath: /home/forgerock/amtruststore
          name: new-truststore
          readOnly: true
          subPath: amtruststore
        - mountPath: /var/run/secrets/am
          name: am-secrets
        - mountPath: /var/run/secrets/amster
          name: amster-key
        - mountPath: /home/forgerock/openam
          name: fbc
      securityContext:
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: fbc
      - name: am-secrets
        projected:
          sources:
          - secret:
              name: am-passwords
          - secret:
              name: am-keystore
      - name: amster-key
        secret:
          items:
          - key: id_rsa.pub
            path: authorized_keys
          secretName: amster
      - name: truststore
        secret:
          secretName: truststore-pem
      - emptyDir: {}
        name: new-truststore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: end-user-ui
    app.kubernetes.io/name: end-user-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  name: end-user-ui
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: end-user-ui
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: end-user-ui
      app.kubernetes.io/name: end-user-ui
      app.kubernetes.io/part-of: forgerock
      tier: ui
  template:
    metadata:
      labels:
        app: end-user-ui
        app.kubernetes.io/component: ui
        app.kubernetes.io/instance: end-user-ui
        app.kubernetes.io/name: end-user-ui
        app.kubernetes.io/part-of: forgerock
        tier: ui
    spec:
      containers:
      - env:
        - name: SUBFOLDER
          value: enduser
        image: gcr.io/forgerock-io/platform-enduser-ui:7.3.1
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /usr/sbin/nginx
              - -s
              - quit
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: end-user-ui
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
      securityContext:
        runAsGroup: 0
        runAsUser: 101
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: idm
    app.kubernetes.io/component: idm
    app.kubernetes.io/instance: idm
    app.kubernetes.io/name: idm
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: idm
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idm
      app.kubernetes.io/component: idm
      app.kubernetes.io/instance: idm
      app.kubernetes.io/name: idm
      app.kubernetes.io/part-of: forgerock
      tier: middle
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: idm
        app.kubernetes.io/component: idm
        app.kubernetes.io/instance: idm
        app.kubernetes.io/name: idm
        app.kubernetes.io/part-of: forgerock
        tier: middle
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: OPENIDM_REPO_PASSWORD
          valueFrom:
            secretKeyRef:
              key: dirmanager.pw
              name: ds-passwords
        - name: USERSTORE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: dirmanager.pw
              name: ds-passwords
        - name: RS_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: IDM_RS_CLIENT_SECRET
              name: amster-env-secrets
        image: ghcr.io/maximv93/idm:v1@sha256:7b3fb4de6d0fc04092774da89925bb447033a78ed6d77edd225dd31af5b14b72
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: X-OpenIDM-Username
              value: anonymous
            - name: X-OpenIDM-Password
              value: anonymous
            - name: X-OpenIDM-NoSession
              value: "true"
            path: /openidm/info/ping
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 60
          timeoutSeconds: 5
        name: openidm
        ports:
        - containerPort: 8080
        - containerPort: 8443
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: X-OpenIDM-Username
              value: anonymous
            - name: X-OpenIDM-Password
              value: anonymous
            - name: X-OpenIDM-NoSession
              value: "true"
            path: /openidm/info/ping
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/run/secrets/idm
          name: idm-secrets
        - mountPath: /opt/openidm/idmtruststore
          name: new-truststore
          readOnly: true
          subPath: idmtruststore
        - mountPath: /opt/openidm/logs
          name: logs
        - mountPath: /opt/openidm/audit
          name: audit-logs
        - mountPath: /var/run/openidm/logging
          name: idm-logging-properties
        - mountPath: /opt/openidm/conf
          name: fbc
          subPath: conf
        - mountPath: /opt/openidm/ui
          name: fbc
          subPath: ui
        - mountPath: /opt/openidm/script
          name: fbc
          subPath: script
      securityContext:
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: fbc
      - name: idm-secrets
        secret:
          secretName: idm
      - emptyDir: {}
        name: new-truststore
      - name: truststore
        secret:
          secretName: truststore-pem
      - emptyDir: {}
        name: logs
      - emptyDir: {}
        name: audit-logs
      - configMap:
          name: idm-logging-properties
        name: idm-logging-properties
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: login-ui
    app.kubernetes.io/name: login-ui
    app.kubernetes.io/part-of: forgerock
    tier: ui
  name: login-ui
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-ui
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: login-ui
      app.kubernetes.io/name: login-ui
      app.kubernetes.io/part-of: forgerock
      tier: ui
  template:
    metadata:
      labels:
        app: login-ui
        app.kubernetes.io/component: ui
        app.kubernetes.io/instance: login-ui
        app.kubernetes.io/name: login-ui
        app.kubernetes.io/part-of: forgerock
        tier: ui
    spec:
      containers:
      - env:
        - name: SUBFOLDER
          value: am/XUI
        image: gcr.io/forgerock-io/platform-login-ui:7.3.1
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /usr/sbin/nginx
              - -s
              - quit
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: login-ui
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
      securityContext:
        runAsGroup: 0
        runAsUser: 101
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    affinity: directory
    app: ds-cts
    app.kubernetes.io/component: directory
    app.kubernetes.io/instance: ds-cts
    app.kubernetes.io/name: ds
    app.kubernetes.io/part-of: forgerock
    tier: ds
  name: ds-cts
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      affinity: directory
      app: ds-cts
      app.kubernetes.io/component: directory
      app.kubernetes.io/instance: ds-cts
      app.kubernetes.io/name: ds
      app.kubernetes.io/part-of: forgerock
  serviceName: ds-cts
  template:
    metadata:
      labels:
        affinity: directory
        app: ds-cts
        app.kubernetes.io/component: directory
        app.kubernetes.io/instance: ds-cts
        app.kubernetes.io/name: ds
        app.kubernetes.io/part-of: forgerock
        tier: ds
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: ds
                operator: Exists
            weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: affinity
                  operator: In
                  values:
                  - directory
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - start-ds
        image: ghcr.io/maximv93/ds-cts:v1@sha256:3903bb682dc850fc506865d6a24462079b80f6b531baa2f2a87449cdee768e43
        imagePullPolicy: Always
        name: ds
        ports:
        - containerPort: 1389
          name: ldap
        - containerPort: 1636
          name: ldaps
        - containerPort: 4444
          name: admin
        - containerPort: 8989
          name: replication
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /opt/opendj/data
          name: data
        - mountPath: /opt/opendj/secrets
          name: secrets
        - mountPath: /var/run/secrets/opendj
          name: secrets
        - mountPath: /opt/opendj/pem-keys-directory/ssl-key-pair
          name: secrets
          subPath: ssl-key-pair-combined.pem
        - mountPath: /opt/opendj/pem-keys-directory/master-key
          name: secrets
          subPath: master-key-pair-combined.pem
        - mountPath: /opt/opendj/pem-trust-directory/cacerts.pem
          name: truststore
          subPath: cacerts
        - mountPath: /var/run/secrets/cloud-credentials-cache/
          name: cloud-credentials-cache
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: WorkerDedicatedDS
        operator: Exists
      volumes:
      - name: secrets
        secret:
          secretName: ds
      - name: passwords
        secret:
          secretName: ds-passwords
      - emptyDir: {}
        name: cloud-credentials-cache
      - name: truststore
        secret:
          defaultMode: 384
          secretName: truststore-pem
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      annotations:
        pv.beta.kubernetes.io/gid: "0"
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: fast
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    affinity: directory
    app: ds-idrepo
    app.kubernetes.io/component: directory
    app.kubernetes.io/instance: ds-idrepo
    app.kubernetes.io/name: ds
    app.kubernetes.io/part-of: forgerock
    tier: ds
  name: ds-idrepo
  namespace: forgerock-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      affinity: directory
      app: ds-idrepo
      app.kubernetes.io/component: directory
      app.kubernetes.io/instance: ds-idrepo
      app.kubernetes.io/name: ds
      app.kubernetes.io/part-of: forgerock
  serviceName: ds-idrepo
  template:
    metadata:
      labels:
        affinity: directory
        app: ds-idrepo
        app.kubernetes.io/component: directory
        app.kubernetes.io/instance: ds-idrepo
        app.kubernetes.io/name: ds
        app.kubernetes.io/part-of: forgerock
        tier: ds
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: ds
                operator: Exists
            weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: affinity
                  operator: In
                  values:
                  - directory
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - start-ds
        image: ghcr.io/maximv93/ds-idrepo:v1@sha256:3eed5a73f12f69fb126be1e1fef838d91fee3db34f888189a95327b4cb964e33
        imagePullPolicy: Always
        name: ds
        ports:
        - containerPort: 1389
          name: ldap
        - containerPort: 1636
          name: ldaps
        - containerPort: 4444
          name: admin
        - containerPort: 8989
          name: replication
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /opt/opendj/data
          name: data
        - mountPath: /opt/opendj/secrets
          name: secrets
        - mountPath: /var/run/secrets/opendj
          name: secrets
        - mountPath: /opt/opendj/pem-keys-directory/ssl-key-pair
          name: secrets
          subPath: ssl-key-pair-combined.pem
        - mountPath: /opt/opendj/pem-keys-directory/master-key
          name: secrets
          subPath: master-key-pair-combined.pem
        - mountPath: /opt/opendj/pem-trust-directory/cacerts.pem
          name: truststore
          subPath: cacerts
        - mountPath: /var/run/secrets/cloud-credentials-cache/
          name: cloud-credentials-cache
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 30
      tolerations:
      - key: WorkerDedicatedDS
        operator: Exists
      volumes:
      - name: secrets
        secret:
          secretName: ds
      - name: passwords
        secret:
          secretName: ds-passwords
      - emptyDir: {}
        name: cloud-credentials-cache
      - name: truststore
        secret:
          defaultMode: 384
          secretName: truststore-pem
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      annotations:
        pv.beta.kubernetes.io/gid: "0"
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: fast
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/body-size: 64m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-ForgeRock-TransactionId $req_id;
      proxy_set_header X-ForgeRock-TransactionId $req_id;
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: forgerock
spec:
  ingressClassName: nginx
  rules:
  - host: forgerock-dev.powerslider.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: am
            port:
              number: 80
        path: /am
        pathType: Prefix
      - backend:
          service:
            name: idm
            port:
              number: 80
        path: /openidm
        pathType: Prefix
      - backend:
          service:
            name: idm
            port:
              number: 80
        path: /upload
        pathType: Prefix
      - backend:
          service:
            name: idm
            port:
              number: 80
        path: /export
        pathType: Prefix
      - backend:
          service:
            name: idm
            port:
              number: 80
        path: /admin
        pathType: Prefix
      - backend:
          service:
            name: idm
            port:
              number: 80
        path: /openicf
        pathType: Prefix
      - backend:
          service:
            name: end-user-ui
            port:
              number: 8080
        path: /enduser
        pathType: Prefix
      - backend:
          service:
            name: admin-ui
            port:
              number: 8080
        path: /platform
        pathType: Prefix
      - backend:
          service:
            name: login-ui
            port:
              number: 8080
        path: /am/XUI
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    haproxy-ingress.github.io/rewrite-target: /$2
    haproxy-ingress.github.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ig
spec:
  ingressClassName: nginx
  rules:
  - host: forgerock-dev.powerslider.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: ig
            port:
              number: 8080
        path: /ig(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - forgerock-dev.powerslider.duckdns.org
    secretName: sslcert
